
wxGTK:

- ShowFullScreen() shows the window if it was still hidden (rpedroso)
- Implemented wxTopLevelWindow::RequestUserAttention() (Mart Raudsepp)
- Base library is now binary compatible when built with wxGTK and wxMotif.
- wxTextCtrl::XYToPosition, PositionToXY and GetLineLength calls are now
  instantaneous in case of GTK+2 multi-line controls (Mart Raudsepp)

wxOS2

- Adjustments for building with Open Watcom C++.

wxUniv:

- Window creation now honours wxVSCROLL.
- Standalone scrollbars generate events of correct type (Jochen Roemmler)

wxMotif:

- Base library is now binary compatible when built with wxGTK and wxMotif.
- wxMotif can now display Japanese text under Japanese locale.


2.6.1
-----

All:

- Added wxLaunchDefaultBrowser.
- Added wxPLURAL() macro in addition to _() (Jonas Rydberg)

All (GUI):

- Fixed potential infinite loop when adjusting wxScrolledWindow scrollbars.
- Radio in menus do not send menu event for selections of already selected item.
- Fixed wrong positioning of marks and enumerations in lists of wxHTML.
- wxImage::Rotate90 respects alpha channel.
- Added wxEVT_SCROLL_CHANGED as synonym for wxEVT_SCROLL_ENDSCROLL.
- Replaced artwork for some cursors, icons and toolbar buttons.
- Fixed sizing problem in generic wxCalendarCtrl for short day abbreviations.
- Fixed wxWindow::DoGetBestSize to keep original best size.
- PNM now supports ASCII and raw grey formats.
- wxGrid focus and edit key improvements.

wxMSW:

- Fixed erroneous selection of content in wxComboBox when within a wxStaticBox
  (checking for selection caused by WM_STYLECHANGED).
- Added deferred positioning to wxRadioBox, wxSlider and wxSpinCtrl and thereby
  eliminated some refresh glitches when resizing.
- Eliminated further refresh glitches caused by wxRadioBox (to nearby controls)
  by refreshing parent when the radio box moves.
- Added ability set the system option "msw.staticbox.optimized-paint" to 0 to